--- a/app/src/main/res/layout/fragment_person_detail.xml
+++ b/app/src/main/res/layout/fragment_person_detail.xml
@@ -1,65 +1,37 @@
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:columnCount="2"
-    android:rowCount="3"
-    tools:context="com.hillbilly.kidslauncher.PersonDetailFragment">
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:alignmentMode="alignMargins"
+            android:clickable="false"
+            android:columnCount="2"
+            android:orientation="horizontal"
+            android:rowCount="2"
+            tools:context="com.hillbilly.kidslauncher.PersonDetailFragment">
 
     <TextView
         style="?android:attr/textAppearanceLarge"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_column="0"
         android:layout_row="0"
         android:padding="16dp"
-        android:text="Name" />
+        android:text="@string/NameLabel"/>
 
     <TextView
-        android:id="@+id/person_name"
-        style="?android:attr/textAppearanceLarge"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:id="@+id/Person_Detail_Contact_Name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_column="1"
         android:layout_row="0"
-        android:padding="16dp"
-        android:textIsSelectable="true" />
+        android:textAppearance="?android:attr/textAppearanceMedium"/>
 
-    <TextView
-        style="?android:attr/textAppearanceLarge"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+    <ListView
+        android:id="@+id/ContactDataList"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_column="0"
-        android:layout_row="1"
-        android:padding="16dp"
-        android:text="Home Number" />
+        android:layout_columnSpan="2"
+        android:layout_row="1"/>
 
-    <TextView
-        android:id="@+id/person_home_num"
-        style="?android:attr/textAppearanceLarge"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_column="1"
-        android:layout_row="1"
-        android:padding="16dp"
-        android:textIsSelectable="true" />
-
-    <TextView
-        style="?android:attr/textAppearanceLarge"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_column="0"
-        android:layout_row="2"
-        android:padding="16dp"
-        android:text="Mobile Number" />
-
-    <TextView
-        android:id="@+id/person_mobile_num"
-        style="?android:attr/textAppearanceLarge"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_column="1"
-        android:layout_row="2"
-        android:padding="16dp"
-        android:textIsSelectable="true" />
 </GridLayout>
