--- a/app/src/main/res/layout/fragment_person_detail.xml
+++ b/app/src/main/res/layout/fragment_person_detail.xml
@@ -2,36 +2,20 @@
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:alignmentMode="alignMargins"
             android:clickable="false"
             android:columnCount="2"
             android:orientation="horizontal"
             android:rowCount="2"
             tools:context="com.hillbilly.kidslauncher.PersonDetailFragment">
 
-    <TextView
-        style="?android:attr/textAppearanceLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_column="0"
-        android:layout_row="0"
-        android:padding="16dp"
-        android:text="@string/NameLabel"/>
-
-    <TextView
-        android:id="@+id/Person_Detail_Contact_Name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_column="1"
-        android:layout_row="0"
-        android:textAppearance="?android:attr/textAppearanceMedium"/>
-
     <ListView
         android:id="@+id/ContactDataList"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_column="0"
         android:layout_columnSpan="2"
-        android:layout_row="1"/>
+        android:layout_gravity="fill|top"
+        android:layout_row="1"
+        />
 
 </GridLayout>
