--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,5 +5,6 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="Icon_Width">64dp</dimen>
     <dimen name="icon_height">64dp</dimen>
+    <dimen name="Contact_Detail_Name_Size">30dp</dimen>
 
 </resources>
