--- a/app/src/main/res/layout/person_detail_phone_list_im.xml
+++ b/app/src/main/res/layout/person_detail_phone_list_im.xml
@@ -1,44 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:gravity="center_vertical|fill_horizontal"
+              android:orientation="horizontal"
               android:weightSum="12">
 
     <TextView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Type"
         android:id="@+id/person_detail_phone_list_im_type"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_weight="2"
-        android:gravity="center_vertical|center_horizontal"/>
+        android:gravity="center_vertical|center_horizontal"
+        android:text="Type"
+        android:textAppearance="?android:attr/textAppearanceMedium"/>
 
-    <TextView
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_weight="8"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/person_detail_phone_list_im_protocol"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="center_vertical|center_horizontal"
         android:text="protocol"
-        android:id="@+id/person_detail_phone_list_im_protocol"
-        android:layout_weight="3"
-        android:gravity="center_vertical|center_horizontal"/>
+        android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
 
-    <TextView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
+        <TextView
+            android:id="@+id/person_detail_phone_list_im_data"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="center_vertical|center_horizontal"
         android:text="Data"
-        android:id="@+id/person_detail_phone_list_im_data"
-        android:layout_weight="5"
-        android:gravity="center_vertical|center_horizontal"/>
+        android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
+    </LinearLayout>
 
     <Button
+        android:id="@+id/person_detail_phone_list_im_action"
+        style="@android:style/Widget.ActionButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:id="@+id/person_detail_phone_list_im_action"
         android:layout_weight="2"
-        android:drawableLeft="@android:drawable/sym_action_chat"
-        style="@android:style/Widget.ActionButton"/>
+        android:drawableLeft="@android:drawable/sym_action_chat"/>
 </LinearLayout>
