--- a/app/src/main/res/layout/person_detail_phone_list_item.xml
+++ b/app/src/main/res/layout/person_detail_phone_list_item.xml
@@ -6,34 +6,46 @@
               android:orientation="horizontal"
               android:weightSum="13">
 
-    <TextView
-        android:id="@+id/Person_Item_Detail_Type"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical|left"
-        android:layout_weight="2"
-        android:gravity="center"
-        android:text="phone"
-        android:textAppearance="?android:attr/textAppearanceMedium"/>
-
-    <TextView
-        android:id="@+id/Person_Item_Detail_Data"
+    <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical|fill_horizontal"
-        android:layout_weight="10"
-        android:editable="false"
-        android:gravity="center_vertical|center_horizontal"
-        android:inputType="phone"
-        android:text="1234567890"
-        android:textAppearance="?android:attr/textAppearanceMedium"/>
+        android:layout_height="match_parent"
+        android:layout_weight="12"
+        android:orientation="vertical"
+        android:paddingLeft="10dp"
+        android:weightSum="2">
+
+
+        <TextView
+            android:id="@+id/Person_Item_Detail_Type"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_gravity="center_vertical|left"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="phone"
+            android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
+
+        <TextView
+            android:id="@+id/Person_Item_Detail_Data"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_gravity="center_vertical|fill_horizontal"
+            android:layout_weight="1"
+            android:editable="false"
+            android:gravity="center_vertical|center_horizontal"
+            android:inputType="phone"
+            android:text="1234567890"
+            android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
+
+    </LinearLayout>
+
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:divider="@android:drawable/divider_horizontal_dim_dark"
+        android:orientation="horizontal"
         android:showDividers="middle"
         android:weightSum="2">
 
@@ -57,7 +69,6 @@
             android:drawableLeft="@android:drawable/sym_action_email"
             android:theme="@android:style/Widget.Holo.ActionButton"/>
     </LinearLayout>
-
 
 
 </LinearLayout>
